# sanctuary

./: .clang-format  .commitlintrc.js  .czrc  .dockerignore  .editorconfig  .gitignore  .latexmkrc  .npmrc  .pnpmfile.cjs  .pnpmignore  LICENSE  README.md  chktexrc  docker_setup.yml  humans.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  sanctuary  sanctuary.env  sanctuary.yml  tree.txt
.dev/: docker_env.sh
.dev/config/: daemon.json
.devcontainer/: .dockerignore  devcontainer.json
.husky/: commit-msg  pre-commit
.sanctuary/: .environment  .shell  commitlint.sh  install.sh  lint.sh
.sanctuary/config/: .asdfrc  .shellcheckrc
articles/: main.tex
articles/from_full_stack_to_full_spiral/: bak2.tex  main.tex
articles/from_full_stack_to_full_spiral/resources/components/: abstract.tex  conclusion.tex  embracing_the_spiral_dynamics_in_development.tex  introducing_the_full_spiral_developer.tex  introduction.tex  push_to_start.tex  references.tex  the_evolution_of_the_developers_role.tex  the_push_to_start_and_push_to_restart_paradox.tex
articles/from_full_stack_to_full_spiral/resources/components/code/: introduction.ipynb  main.css  spiral_dynamics copy.html  spiral_dynamics.html
articles/from_full_stack_to_full_spiral/resources/components/code/jsm/controls/: OrbitControls.js
articles/from_full_stack_to_full_spiral/resources/components/code/jsm/lines/: Line2.js  LineGeometry.js  LineMaterial.js  LineSegments2.js  LineSegmentsGeometry.js
articles/from_full_stack_to_full_spiral/resources/style/: mediumarticle.sty
articles/ideas/: adhd_ocd_developer.md  music_pipeline.md
containers/: buildkitd.toml  common.env  common.yml  network.yml
containers/base/: base.Dockerfile  base.env  base.yml  package.list  packages2.list
containers/base/config/: .gitconfig  apt.conf  dpkg.cfg
containers/minio/: minio.env  minio.yml
containers/redis/: redis.Dockerfile  redis.env  redis.yml
containers/tiledb/: tiledb.Dockerfile  tiledb.env  tiledb.yml
containers/tiledb-mariadb-server/: README.md
docs/: latex.packages  packages.list  test_eps_conversion.tex  test_glossaries.tex
docs/pubtex/: README.md
docs/pubtex/classes/: pubtex-medium.cls
docs/pubtex/components/: author.tex  image.tex  quote.tex  subtitle.tex  title.tex
docs/pubtex/scripts/: build.sh  publish.sh
docs/pubtex/templates/: medium-article.tex
docs/report/: report.tex
resources/licenses/International/CC-BY-4.0/: LICENSE.md  README.md
resources/licenses/International/CeCILL-v2.1/: LICENSE.md  LICENSE.txt  README.md
resources/licenses/International/EUPL-1.1/: LICENSE.md  README.md
resources/licenses/International/EUPL-1.2/: LICENSE.md  README.md
resources/licenses/International/MulanPSL-2.0/: LICENSE.md  LICENSE.txt  README.md
resources/licenses/Non-reusable/LPPL-v1.3c/: LICENSE.md  README.md
resources/licenses/Other/Artistic-License-2.0/: LICENSE.md  README.md
resources/licenses/Other/BSD-0-Clause/: LICENSE.md  README.md
resources/licenses/Other/BSD-4-Clause-Original/: LICENSE.md  README.md
resources/licenses/Other/MIT-No-Attribution/: LICENSE.md  README.md
resources/licenses/Other/UPL-1.0/: LICENSE.md  README.md
resources/licenses/Other/zlib License/: LICENSE.md  LICENSE.txt  README.md
resources/licenses/Popular/Apache-License-2.0/: LICENSE.md  README.md
resources/licenses/Popular/BSD-2-Clause/: LICENSE.md  README.md
resources/licenses/Popular/BSD-3-Clause/: LICENSE.md  README.md
resources/licenses/Popular/BSD-3-Clause-Clear/: LICENSE.md  README.md
resources/licenses/Popular/CC-Attribution-Sharealike-4.0/: LICENSE.md  README.md
resources/licenses/Popular/GPL-2.0/: LICENSE.md  README.md
resources/licenses/Popular/GPL-3.0/: LICENSE.md  README.md
resources/licenses/Popular/LGPL-3.0/: LICENSE.md  README.md
resources/licenses/Popular/MIT/: README.md
resources/licenses/Popular/MPL-2.0/: LICENSE.md  README.md
resources/licenses/Special Purpose/SIL-OFL-1.1/: LICENSE.md  README.md
resources/licenses/Special Purpose/The Unlicense/: LICENSE.md  README.md
resources/licenses/Superseded/ECL-2.0/: LICENSE.md  README.md
resources/licenses/Superseded/EPL-1.0/: LICENSE.md  README.md
resources/licenses/Superseded/EPL-2.0/: LICENSE.md  README.md
resources/licenses/Superseded/OSL-3.0/: LICENSE.md  README.md
resources/licenses/Uncategorized/AFL-3.0/: LICENSE.md  README.md
resources/licenses/Uncategorized/Boost-License-v1.0/: LICENSE.md  README.md
resources/licenses/Uncategorized/ISC-License/: LICENSE.md  README.md
resources/licenses/Uncategorized/Illinois-NCSA-License/: LICENSE.md  README.md
resources/licenses/Uncategorized/Microsoft-PL/: LICENSE.md  README.md
resources/licenses/Uncategorized/Microsoft-RL/: LICENSE.md  README.md
resources/licenses/Uncategorized/Open-Data-ODBL-v1.0/: LICENSE.md  README.md
resources/licenses/Uncategorized/PostgreSQL/: LICENSE.md  README.md
resources/licenses/Uncategorized/Vim/: LICENSE.md  LICENSE.txt  README.md
resources/licenses/Uncategorized/WTFPL/: LICENSE.md  README.md
scripts/: build.sh  convert.pl  licenses.py
